[tool.poetry]
name = "media-utility-bot"
version = "0.1.1"
description = "Discord bot to automate media manipulation capabilities."
authors = ["Aidan Gill <79653940+aidanngill@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffmpeg-python = "^0.2.0"
discord-py = "^2.4.0"
yt-dlp = "^2024.7.9"
shazamio = "^0.6.0"
validators = "^0.32.0"
redis = "^5.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
